# Real-Time-Earthquake-Analytics

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: earthquake_pipeline.yml
artifacts/: hypothesis_results.json  model_explainability_latest.json  model_metrics_history.jsonl  model_metrics_latest.json
dashboard/: app.py
docs/: hypothesis_matrix.md  runbook.md
output/: syso_summary_feed.geojson  syso_summary_feed.json
src/earthquake_analytics/: __init__.py  __main__.py  cli.py  clustering.py  config.py  db.py  eda.py  ingest.py  logging_utils.py  modeling.py  models.py  pipeline.py  run_eda.py  run_scheduler.py  scheduler.py  storage.py  summary_feed.py  utils.py  validation.py
tests/: test_clustering.py  test_validation.py
